# c-api-rest

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
bash/: get_test.sh  post_test.sh
inc/: api.h  client.h
src/: api.c  client.c
